for each all day erry day

--- a/sample-code-jsForEach/index.html
+++ b/sample-code-jsForEach/index.html
@@ -25,13 +25,13 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <header>
-            <h1>WDI 31 Rocks!</h1>
+            <h1>WDI 34 Rocks!</h1>
             <div class="where row">
               <div class="col-md-6">
-                <p>offline: room 4</p>
+                <p>offline: room 7</p>
               </div>
               <div class="col-md-6">
-                <p>online: <a href="https://github.com/sf-wdi-31/schedule" target="_blank">github</a></p>
+                <p>online: <a href="https://github.com/sf-wdi-34/schedule" target="_blank">github</a></p>
               </div>
             </div>
           </header>
@@ -46,9 +46,9 @@
             <script id="developer-li-template" type="text/x-handlebars-template">
 
                 <li class="list-group-item">
-                  <a href="https://www.github.com/{{github_username}}" target="_blank"><strong>{{first_name}} {{last_name}}</strong></a>
+                  <a href="https://www.github.com/{{dev.github_username}}" target="_blank"><strong>{{dev.first_name}} {{dev.last_name}}</strong></a>
                 </li>
-              
+
             </script>
           </ul>
         </div>
